Docs: document api
